// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal center option can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(220.00000000000003%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":34.375,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 34.375,
        "y": 17.1875,
      },
      Object {
        "x": 50,
        "y": 17.1875,
      },
      Object {
        "x": 42.1875,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,34.375,17.1875)",
    "translateX": 34.375,
    "translateY": 17.1875,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(110.00000000000001%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":17.1875,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 17.1875,
        "y": 17.1875,
      },
      Object {
        "x": 32.8125,
        "y": 17.1875,
      },
      Object {
        "x": 32.8125,
        "y": 32.8125,
      },
      Object {
        "x": 17.1875,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,17.1875,17.1875)",
    "translateX": 17.1875,
    "translateY": 17.1875,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(0%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":0,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 17.1875,
      },
      Object {
        "x": 15.625,
        "y": 17.1875,
      },
      Object {
        "x": 7.8125,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,0,17.1875)",
    "translateX": 0,
    "translateY": 17.1875,
  },
]
`;

exports[`packAnimal it works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(220.00000000000003%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":34.375,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 34.375,
        "y": 17.1875,
      },
      Object {
        "x": 50,
        "y": 17.1875,
      },
      Object {
        "x": 42.1875,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,34.375,17.1875)",
    "translateX": 34.375,
    "translateY": 17.1875,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(110.00000000000001%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":17.1875,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 17.1875,
        "y": 17.1875,
      },
      Object {
        "x": 32.8125,
        "y": 17.1875,
      },
      Object {
        "x": 32.8125,
        "y": 32.8125,
      },
      Object {
        "x": 17.1875,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,17.1875,17.1875)",
    "translateX": 17.1875,
    "translateY": 17.1875,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(0%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":0,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 17.1875,
      },
      Object {
        "x": 15.625,
        "y": 17.1875,
      },
      Object {
        "x": 7.8125,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,0,17.1875)",
    "translateX": 0,
    "translateY": 17.1875,
  },
]
`;

exports[`packAnimal it works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 100%;
        height: 100%;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":10,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":10,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 50,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 10,
    "svgTransform": "matrix(10,0,0,10,0,0)",
    "translateX": 0,
    "translateY": 0,
  },
]
`;

exports[`packAnimal jitter option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 7.2552325430718305%;
        height: 5.804186034457465%;
        transform: translateX(419.7502124852115%) translateY(1302.647871564958%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.7255232543071831,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.7255232543071831,
      \\"e\\":15.22692700792011,
      \\"f\\":37.804052919765354
    }",
    "points": Array [
      Object {
        "x": 15.226927007920116,
        "y": 37.804052919765354,
      },
      Object {
        "x": 18.85454327945604,
        "y": 37.804052919765354,
      },
      Object {
        "x": 17.040735143688078,
        "y": 41.43166919130127,
      },
    ],
    "rotate": -0,
    "scale": 0.7255232543071831,
    "svgTransform": "matrix(0.7255232543071831,0,0,0.7255232543071831,15.22692700792011,37.804052919765354)",
    "translateX": 15.22692700792011,
    "translateY": 37.804052919765354,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 7.853374941470594%;
        height: 7.853374941470594%;
        transform: translateX(785.55743871229%) translateY(1180.2241298086044%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.7853374941470593,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.7853374941470593,
      \\"e\\":30.8463855213446,
      \\"f\\":46.34371303178915
    }",
    "points": Array [
      Object {
        "x": 30.84638552134459,
        "y": 46.343713031789136,
      },
      Object {
        "x": 34.77307299207989,
        "y": 46.343713031789136,
      },
      Object {
        "x": 34.77307299207989,
        "y": 50.27040050252444,
      },
      Object {
        "x": 30.84638552134459,
        "y": 50.27040050252444,
      },
    ],
    "rotate": -0,
    "scale": 0.7853374941470593,
    "svgTransform": "matrix(0.7853374941470593,0,0,0.7853374941470593,30.8463855213446,46.34371303178915)",
    "translateX": 30.8463855213446,
    "translateY": 46.34371303178915,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 7.671029911695147%;
        height: 7.671029911695147%;
        transform: translateX(549.4736447491922%) translateY(-7.049913913441689%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.7671029911695147,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.7671029911695147,
      \\"e\\":21.075143822796036,
      \\"f\\":-0.2704005025244349
    }",
    "points": Array [
      Object {
        "x": 21.075143822796047,
        "y": -0.2704005025244349,
      },
      Object {
        "x": 24.910658778643622,
        "y": -0.2704005025244349,
      },
      Object {
        "x": 22.992901300719833,
        "y": 3.565114453323139,
      },
    ],
    "rotate": -0,
    "scale": 0.7671029911695147,
    "svgTransform": "matrix(0.7671029911695147,0,0,0.7671029911695147,21.075143822796036,-0.2704005025244349)",
    "translateX": 21.075143822796036,
    "translateY": -0.2704005025244349,
  },
]
`;

exports[`packAnimal jitter option works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.333333333333336%;
        height: 33.333333333333336%;
        transform: translateX(205.61012067961508%) translateY(90.48347148949624%) rotate(10.277322009205808deg)
      ",
    "matrix": "{
      \\"a\\":3.2798524392742046,
      \\"b\\":0.5947092463533437,
      \\"c\\":-0.5947092463533437,
      \\"d\\":3.2798524392742046,
      \\"e\\":34.26835344660252,
      \\"f\\":15.080578581582706
    }",
    "points": Array [
      Object {
        "x": 34.26835344660251,
        "y": 15.080578581582706,
      },
      Object {
        "x": 50.66761564297354,
        "y": 18.05412481334944,
      },
      Object {
        "x": 39.49443831302129,
        "y": 32.96661389383709,
      },
    ],
    "rotate": 10.277322009205808,
    "scale": 3.3333333333333335,
    "svgTransform": "matrix(3.2798524392742046,0.5947092463533437,-0.5947092463533437,3.2798524392742046,34.26835344660252,15.080578581582706)",
    "translateX": 34.26835344660252,
    "translateY": 15.080578581582706,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.333333333333336%;
        height: 33.333333333333336%;
        transform: translateX(99.03614842458813%) translateY(87.98063779498699%) rotate(19.35183431021869deg)
      ",
    "matrix": "{
      \\"a\\":3.1450051861469097,
      \\"b\\":1.1045603153382586,
      \\"c\\":-1.1045603153382586,
      \\"d\\":3.1450051861469097,
      \\"e\\":16.506024737431357,
      \\"f\\":14.663439632497834
    }",
    "points": Array [
      Object {
        "x": 16.506024737431353,
        "y": 14.663439632497832,
      },
      Object {
        "x": 32.23105066816592,
        "y": 20.186241209189134,
      },
      Object {
        "x": 26.708249091474624,
        "y": 35.91126713992368,
      },
      Object {
        "x": 10.983223160740057,
        "y": 30.388465563232394,
      },
    ],
    "rotate": 19.35183431021869,
    "scale": 3.3333333333333335,
    "svgTransform": "matrix(3.1450051861469097,1.1045603153382586,-1.1045603153382586,3.1450051861469097,16.506024737431357,14.663439632497834)",
    "translateX": 16.506024737431357,
    "translateY": 14.663439632497834,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.333333333333336%;
        height: 33.333333333333336%;
        transform: translateX(-4.005693857841243%) translateY(84.53239716045795%) rotate(16.59048588946461deg)
      ",
    "matrix": "{
      \\"a\\":3.1945666684530325,
      \\"b\\":0.9517641051857366,
      \\"c\\":-0.9517641051857366,
      \\"d\\":3.1945666684530325,
      \\"e\\":-0.6676156429735407,
      \\"f\\":14.088732860076327
    }",
    "points": Array [
      Object {
        "x": -0.6676156429735404,
        "y": 14.088732860076329,
      },
      Object {
        "x": 15.305217699291635,
        "y": 18.847553386005018,
      },
      Object {
        "x": 2.5599805022303572,
        "y": 32.44097646530583,
      },
    ],
    "rotate": 16.59048588946461,
    "scale": 3.3333333333333335,
    "svgTransform": "matrix(3.1945666684530325,0.9517641051857366,-0.9517641051857366,3.1945666684530325,-0.6676156429735407,14.088732860076327)",
    "translateX": -0.6676156429735407,
    "translateY": 14.088732860076327,
  },
]
`;

exports[`packAnimal margin option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 21.428571428571427%;
        height: 21.428571428571427%;
        transform: translateX(366.66666666666663%) translateY(183.3333333333332%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.142857142857143,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.142857142857143,
      \\"e\\":39.28571428571428,
      \\"f\\":19.642857142857128
    }",
    "points": Array [
      Object {
        "x": 39.285714285714285,
        "y": 19.642857142857142,
      },
      Object {
        "x": 50,
        "y": 19.642857142857142,
      },
      Object {
        "x": 44.64285714285715,
        "y": 30.35714285714286,
      },
    ],
    "rotate": -0,
    "scale": 2.142857142857143,
    "svgTransform": "matrix(2.142857142857143,0,0,2.142857142857143,39.28571428571428,19.642857142857128)",
    "translateX": 39.28571428571428,
    "translateY": 19.642857142857128,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 21.428571428571427%;
        height: 21.428571428571427%;
        transform: translateX(183.3333333333332%) translateY(183.3333333333332%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.142857142857143,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.142857142857143,
      \\"e\\":19.642857142857128,
      \\"f\\":19.642857142857128
    }",
    "points": Array [
      Object {
        "x": 19.642857142857142,
        "y": 19.642857142857142,
      },
      Object {
        "x": 30.35714285714286,
        "y": 19.642857142857142,
      },
      Object {
        "x": 30.35714285714286,
        "y": 30.35714285714286,
      },
      Object {
        "x": 19.642857142857142,
        "y": 30.35714285714286,
      },
    ],
    "rotate": -0,
    "scale": 2.142857142857143,
    "svgTransform": "matrix(2.142857142857143,0,0,2.142857142857143,19.642857142857128,19.642857142857128)",
    "translateX": 19.642857142857128,
    "translateY": 19.642857142857128,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 21.428571428571427%;
        height: 21.428571428571427%;
        transform: translateX(-9.947598300641404e-14%) translateY(183.3333333333332%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.142857142857143,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.142857142857143,
      \\"e\\":-1.0658141036401503e-14,
      \\"f\\":19.642857142857128
    }",
    "points": Array [
      Object {
        "x": -3.0451831532575725e-15,
        "y": 19.642857142857142,
      },
      Object {
        "x": 10.714285714285714,
        "y": 19.642857142857142,
      },
      Object {
        "x": 5.357142857142854,
        "y": 30.35714285714286,
      },
    ],
    "rotate": -0,
    "scale": 2.142857142857143,
    "svgTransform": "matrix(2.142857142857143,0,0,2.142857142857143,-1.0658141036401503e-14,19.642857142857128)",
    "translateX": -1.0658141036401503e-14,
    "translateY": 19.642857142857128,
  },
]
`;

exports[`packAnimal maximizing can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(560%) translateY(450%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":28,
      \\"f\\":22.5
    }",
    "points": Array [
      Object {
        "x": 28,
        "y": 22.5,
      },
      Object {
        "x": 33,
        "y": 22.5,
      },
      Object {
        "x": 30.5,
        "y": 27.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,28,22.5)",
    "translateX": 28,
    "translateY": 22.5,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(450%) translateY(450%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":22.5,
      \\"f\\":22.5
    }",
    "points": Array [
      Object {
        "x": 22.5,
        "y": 22.5,
      },
      Object {
        "x": 27.5,
        "y": 22.5,
      },
      Object {
        "x": 27.5,
        "y": 27.5,
      },
      Object {
        "x": 22.5,
        "y": 27.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,22.5,22.5)",
    "translateX": 22.5,
    "translateY": 22.5,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(340%) translateY(450%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":17,
      \\"f\\":22.5
    }",
    "points": Array [
      Object {
        "x": 17,
        "y": 22.5,
      },
      Object {
        "x": 22,
        "y": 22.5,
      },
      Object {
        "x": 19.5,
        "y": 27.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,17,22.5)",
    "translateX": 17,
    "translateY": 22.5,
  },
]
`;

exports[`packAnimal postPackPolygonScale option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 30%;
        height: 24%;
        transform: translateX(238.8888888888888%) translateY(145.83333333333331%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3,
      \\"e\\":35.83333333333332,
      \\"f\\":17.5
    }",
    "points": Array [
      Object {
        "x": 35.83333333333332,
        "y": 17.5,
      },
      Object {
        "x": 50.83333333333333,
        "y": 17.5,
      },
      Object {
        "x": 43.33333333333333,
        "y": 32.5,
      },
    ],
    "rotate": -0,
    "scale": 3,
    "svgTransform": "matrix(3,0,0,3,35.83333333333332,17.5)",
    "translateX": 35.83333333333332,
    "translateY": 17.5,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 24%;
        height: 24%;
        transform: translateX(145.8333333333333%) translateY(145.83333333333331%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3,
      \\"e\\":17.499999999999993,
      \\"f\\":17.5
    }",
    "points": Array [
      Object {
        "x": 17.499999999999993,
        "y": 17.5,
      },
      Object {
        "x": 32.499999999999986,
        "y": 17.5,
      },
      Object {
        "x": 32.499999999999986,
        "y": 32.5,
      },
      Object {
        "x": 17.499999999999993,
        "y": 32.5,
      },
    ],
    "rotate": -0,
    "scale": 3,
    "svgTransform": "matrix(3,0,0,3,17.499999999999993,17.5)",
    "translateX": 17.499999999999993,
    "translateY": 17.5,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 30%;
        height: 24%;
        transform: translateX(-5.555555555555666%) translateY(145.83333333333331%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3,
      \\"e\\":-0.8333333333333499,
      \\"f\\":17.5
    }",
    "points": Array [
      Object {
        "x": -0.8333333333333393,
        "y": 17.5,
      },
      Object {
        "x": 14.16666666666666,
        "y": 17.5,
      },
      Object {
        "x": 6.666666666666661,
        "y": 32.5,
      },
    ],
    "rotate": -0,
    "scale": 3,
    "svgTransform": "matrix(3,0,0,3,-0.8333333333333499,17.5)",
    "translateX": -0.8333333333333499,
    "translateY": 17.5,
  },
]
`;

exports[`packAnimal rotation can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(220.00000000000003%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":34.375,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 34.375,
        "y": 17.1875,
      },
      Object {
        "x": 50,
        "y": 17.1875,
      },
      Object {
        "x": 42.1875,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,34.375,17.1875)",
    "translateX": 34.375,
    "translateY": 17.1875,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(110.00000000000001%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":17.1875,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 17.1875,
        "y": 17.1875,
      },
      Object {
        "x": 32.8125,
        "y": 17.1875,
      },
      Object {
        "x": 32.8125,
        "y": 32.8125,
      },
      Object {
        "x": 17.1875,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,17.1875,17.1875)",
    "translateX": 17.1875,
    "translateY": 17.1875,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 31.25%;
        height: 31.25%;
        transform: translateX(0%) translateY(110.00000000000001%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.125,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.125,
      \\"e\\":0,
      \\"f\\":17.1875
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 17.1875,
      },
      Object {
        "x": 15.625,
        "y": 17.1875,
      },
      Object {
        "x": 7.8125,
        "y": 32.8125,
      },
    ],
    "rotate": -0,
    "scale": 3.125,
    "svgTransform": "matrix(3.125,0,0,3.125,0,17.1875)",
    "translateX": 0,
    "translateY": 17.1875,
  },
]
`;
